--- a/src/style/portfolio-form.scss
+++ b/src/style/portfolio-form.scss
@@ -1,7 +1,38 @@
 .portfolio-form-wrapper {
-    display: grid;
+    @include base-grid();
     grid-template-columns: 1fr;
     padding: 42px;
 
     @include input-element();
+    input {
+        margin-bottom: 0px;
+    }
+
+    .image-uploaders {
+        .dz-clickable {
+            height: 200px;
+        }
+    }
+
+    .portfolio-manager-image-wrapper {
+        img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+            border-radius: 5px;
+            background-color: $charcoal;
+        }
+
+        .image-removal-link {
+            display: flex;
+            justify-content: center;
+            font-size: 1.5em;
+            
+            a {
+                font-weight: 900;
+                color: $warning;
+                cursor: pointer;
+            }
+        }
+    }
 }
