Added blog form modal
Added the react-modal library and started building the blog form for the modal

--- a/src/style/portfolio-sidebar.scss
+++ b/src/style/portfolio-sidebar.scss
@@ -1,4 +1,7 @@
 .portfolio-sidebar-list-wrapper {
+    height: calc(100vh - 65px);
+    overflow-y: scroll;
+
     .portfolio-item-thumb {
         padding: 21px;
 
