added icon helper and blog rich text editor
Added a helper method to separate the fontawesome code from the app component. Added the rich text editor libraries and base code for the wysiwyg functionality on the blogs form.

--- a/src/style/blog.scss
+++ b/src/style/blog.scss
@@ -2,6 +2,27 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
+
+    .new-blog-link {
+        position: fixed;
+        right: 0;
+        bottom: 0;
+        margin-bottom: 35px;
+
+        a {
+            font-size: 3em;
+            cursor: pointer;
+            color: $teal;
+            margin-right: 50px;
+
+            transition: 0.3s ease-in-out;
+
+            &:hover {
+                color: $dark-teal
+            }
+        }
+    }
 
     .content-container {
         display: flex;
