Started structure for portfolio detail
Converted portfolio detail to class component and created call to API

--- a/src/style/layouts.scss
+++ b/src/style/layouts.scss
@@ -19,16 +19,31 @@
             .bullet-point-group {
                 display: flex;
                 align-items: center;
-
-                .fa-icon {
-                    font-size: 2em;
-                    opacity: 0.6;
+                text-decoration: none;
+                color: black;
+                transition: 0.3s ease-in-out;
+                
+                .icon-wrapper {
+                    width: 30px;
+                    height: 30px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    
+                    .fa-icon {
+                        font-size: 2em;
+                        opacity: 0.6;
+                    }
                 }
     
                 .text {
                     font-size: 1.5em;
                     font-weight: 900;
                     margin-left: 21px;
+                }
+
+                &:hover {
+                    color: $teal;
                 }
             }
 
