--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -10,4 +10,11 @@
             width: 100%;
         }
     }
+
+    .content-loader {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 30px;
+    }
 }
