--- a/src/style/layouts.scss
+++ b/src/style/layouts.scss
@@ -51,12 +51,27 @@
 
         .about-icons {
             margin-top: 40px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
 
             .fa-icon {
                 font-size: 2em;
-                opacity: 0.7;
                 margin: 15px;
+                opacity: 0.7;
+                transition: 0.5s ease-in-out;
+
+                &:hover {
+                    opacity: 1;
+                    color: $teal;
+                    transition: 0.5s ease-in-out;
+                }
             }
+        }
+
+        .about-icon-tooltip {
+            height: 30px;
+            font-weight: 600;
         }
     }
 
