added style polish to about and portfolio pages

--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -3,6 +3,10 @@ body {
     font-family: 'Noto Sans JP', sans-serif;
 }
 
+a {
+    text-decoration: none;
+}
+
 .container {
     display: grid;
     grid-template-columns: 1fr;
