converted to mobile-first design

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -6,6 +6,8 @@
 @import "./grid.scss";
 @import "./navigation.scss";
 @import "./layouts.scss";
+@import "./about.scss";
+@import "./contact.scss";
 @import "./home.scss";
 @import "./portfolio.scss";
 @import "./portfolio-manager.scss";
