--- a/src/style/blog.scss
+++ b/src/style/blog.scss
@@ -3,6 +3,14 @@
     flex-direction: column;
     align-items: center;
     position: relative;
+    padding-left: 15vw;
+    padding-right: 15vw;
+    transition: 1s ease-in-out;
+
+    @media (min-width: 1500px) {
+        padding-left: 25vw;
+        padding-right: 25vw;
+    }
 
     .admin-blog-wrapper {
         display: flex;
@@ -38,7 +46,7 @@
     .content-container {
         display: flex;
         flex-direction: column;
-        width: 800px;
+        width: 100%;
 
         a {
             text-decoration: none;
