--- a/src/style/layouts.scss
+++ b/src/style/layouts.scss
@@ -1,81 +1,37 @@
 .content-page-wrapper {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     height: calc(100vh - 65px);
+
+    @media (min-width: 1000px) {
+        grid-template-columns: 1fr 1fr;
+    }
 
     .content-column {
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        text-align: center;
         background-color: $offwhite;
-        padding: 100px;
-
-        .contact-bullet-points {
-            display: grid;
-            grid-template-columns: 1fr;
-            grid-gap: 21px;
-
-            .bullet-point-group {
-                display: flex;
-                align-items: center;
-                text-decoration: none;
-                color: black;
-                transition: 0.3s ease-in-out;
-                
-                .icon-wrapper {
-                    width: 30px;
-                    height: 30px;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    
-                    .fa-icon {
-                        font-size: 2em;
-                        opacity: 0.6;
-                    }
-                }
-    
-                .text {
-                    font-size: 1.5em;
-                    font-weight: 900;
-                    margin-left: 21px;
-                }
-
-                &:hover {
-                    color: $teal;
-                }
-            }
-
-        }
-
-        .about-icons {
-            margin-top: 40px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-
-            .fa-icon {
-                font-size: 2em;
-                margin: 15px;
-                opacity: 0.7;
-                transition: 0.5s ease-in-out;
-
-                &:hover {
-                    opacity: 1;
-                    color: $teal;
-                    transition: 0.5s ease-in-out;
-                }
-            }
-        }
-
-        .about-icon-tooltip {
-            height: 30px;
-            font-weight: 600;
-        }
+        padding: 50px;
     }
 
     .image-column {
         background-size: cover;
+        height: 100vw;
+        transition: 1s ease-in-out;
+
+        @media (min-width: 400px) {
+            height: 350px;
+        }
+
+        @media (min-width: 600px) {
+            height:600px;
+        }
+
+        @media (min-width: 1000px) {
+            height: 100%;
+        }
     }
 }
